--- a/trainingapp/src/components/slides/advancedConcepts/unitTests7/unitTests7.html
+++ b/trainingapp/src/components/slides/advancedConcepts/unitTests7/unitTests7.html
@@ -24,7 +24,7 @@
 <editor>
   <editortab title="dataService.ts" fileType="js" >
 import {Injectable} from '@angular/core';
-import {Http, Response} from 'angular2/http';
+import {Http, Response} from '@angular2/http';
 import {Observable} from 'rxjs/Observable';
 import 'rxjs/add/operator/map';
 
@@ -50,7 +50,7 @@ export class DataService{
 
 }
   </editortab>
-  <editortab title="identityPipe.spec.ts" fileType="js">
+  <editortab title="dataService.spec.ts" fileType="js">
 import {Injector, provide} from '@angular/core';
 
 import {Observable} from 'rxjs/Observable';
