--- a/trainingapp/src/components/slides/ecosystem/esSix2/esSix2.html
+++ b/trainingapp/src/components/slides/ecosystem/esSix2/esSix2.html
@@ -11,7 +11,7 @@
 	Below are examples
 </p>
 
-<editor fiddle="false" >
+<editor [fiddle]="false" >
 	<editortab title="constant-number.js" fileType="js">
 const ID= 0;
 ID++; // Error
