--- a/trainingapp/src/components/slides/ecosystem/startFromScratch5/startFromScratch5.html
+++ b/trainingapp/src/components/slides/ecosystem/startFromScratch5/startFromScratch5.html
@@ -12,8 +12,8 @@
 </p>
 
 <p>
-    The following <a href="https://plnkr.co/edit/qBo0BZeQFWGMhxRsw0bf?p=info" target="_blank">minimal application sample</a>
-     shows you how it can be done, below are the starting steps of the app:
+    The following <a href="http://plnkr.co/edit/AkuQxM30cjJLATQ9A2zO?p=info" target="_blank">minimal application sample</a>
+     shows you how an example, below are the starting steps of the app:
 </p>
 <ol>
     <li>The index page is loaded</li>
