--- a/trainingapp/src/components/slides/ecosystem/typescript2/typescript2.html
+++ b/trainingapp/src/components/slides/ecosystem/typescript2/typescript2.html
@@ -2,12 +2,15 @@
 	<span class="title-category">Ecosystem</span>
 	About Typescript - More Details
 </h2>
+
+<p>ES6 superset</p>
+<img src="/imgs/typescript-es6-es5.png">
+
 <p> From their website:</p>
 <img src="/imgs/ts1.jpg">
 <img src="/imgs/ts2.jpg">
 
 <p>
-	Because <em>typescript</em> is a superset of <em>ES6</em>, 
-	let's first have a look to <em>ES6</em> before going back
-	to <em>typescript</em>
+	Learning <em>typescript</em> is not much more than learning <em>ES6</em>, 
+	so let's first have a look at <em>ES6</em>.
 </p>
