--- a/trainingapp/src/components/slides/ecosystem/typescript4/typescript4.html
+++ b/trainingapp/src/components/slides/ecosystem/typescript4/typescript4.html
@@ -19,4 +19,4 @@
         let people: Array&lt;Person&gt; = new Array&lt;Person&gt;(); // or Person[]            
 
     </editortab>
-<editor>
+</editor>
