--- a/trainingapp/src/components/slides/ecosystem/typescript8/typescript8.html
+++ b/trainingapp/src/components/slides/ecosystem/typescript8/typescript8.html
@@ -5,12 +5,11 @@
     
 <p>
     Finally, <em>typescript</em> also provides a way to create <em>Decorators</em>.
-    This feature is very closed to <em>Java annotations</em> both in term of syntax
-    and behavior.
-    Decorators allow to add information or behavior arround a method, an attribute, a class or a function parameter.   
+    This feature is very closed to <em>Java annotations</em>.
+    They allow to add information or behavior arround a method, an attribute, a class or a function parameter.   
 </p>
 <p>
-    Decorators are often used in <em>Angular2</em> apps in order to define the specities of components or services.
+    Decorators are often used in <em>Angular2</em> apps to declare components, pipes and some other specific things.
 </p>
 
 <p>
