--- a/trainingapp/src/components/slides/mainConcepts/aboutForms6/aboutForms6.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutForms6/aboutForms6.html
@@ -5,8 +5,7 @@
 
 <ul>
 	<li>
-		So, with our <em>Control</em> / <em>ControlGroup</em> and <em>FormBuilder</em>,
-		we are able to add some behavior when something goes wrong with validators
+		In previous samples, we used the <em>required</em> validator with <em>Control</em> / <em>ControlGroup</em> and <em>FormBuilder</em> tools to add some behavior when something goes wrong! (no data into the input)
 	</li>
 	<li>
 		The native validators provided by <em>Angular2</em> are:
