--- a/trainingapp/src/components/slides/mainConcepts/aboutLifecycle/aboutLifecycle.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutLifecycle/aboutLifecycle.html
@@ -16,12 +16,12 @@
     </li>
     <li>
         As a developper, you can use them when you need to do some specific things at some
-        times
+        points
     </li>
     <li>
         If you use typescript, implement the associated interface before adding the method (just to be clean)
     </li>
     <li>
-        The next slides about lifecycle are based on <a href="https://angular.io/docs/ts/latest/guide/lifecycle-hooks.html">the official documentation</a> : no specific notion hare
+        The next slides about lifecycle are based on <a href="https://angular.io/docs/ts/latest/guide/lifecycle-hooks.html">the official documentation</a> : no specific notion here
     </li>
 </ul>
