--- a/trainingapp/src/components/slides/mainConcepts/aboutPipes2/aboutPipes2.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutPipes2/aboutPipes2.html
@@ -15,25 +15,22 @@
 	<li>Parameters: format</li>
 </ul>
 
-<editor ng2="true" plunker="true" description="Using pipes">
-    <editortab title="app/boot.ts" fileType="js" ngNonBindable>
+<editor [ng2]="true" [plunker]="true" description="Using pipes">
+    <editortab title="src/app.ts" fileType="js" ngNonBindable>
 import {Component} from '@angular/core';
-import {bootstrap}    from 'angular2/platform/browser';
+import {bootstrap} from '@angular/platform-browser-dynamic';
 import {SubCmp} from './sub-cmp';
 
 @Component({
-    selector: 'my-app',
+    selector: 'app',
     template: `&lt;p&gt; Now: {{ now() | date:'dd/MM/yyyy' }} &lt;/p&gt;`
 })
-export class AppComponent {
+export class App {
 
 	now(): Date {
 		return new Date();
 	}
-
 }
 
-
-bootstrap(AppComponent), []);
     </editortab>
 </editor>
