--- a/trainingapp/src/components/slides/mainConcepts/aboutRouter4/aboutRouter4.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutRouter4/aboutRouter4.html
@@ -11,31 +11,33 @@
 	<li>
 		A <em>RouteDefinition</em> is an interface:
 		<editortab [alone]="true" title="route-definition.ts" fileType="js">
-			export interface RouteDefinition {
-			  path?: string;
-			  aux?: string;
-			  component?: Type | ComponentDefinition;
-			  loader?: Function;
-			  redirectTo?: any[];
-			  as?: string;
-			  name?: string;
-			  data?: any;
-			  useAsDefault?: boolean;
-			}
+export interface RouteDefinition {
+    path?: string;
+    aux?: string;
+    regex?: string;
+    serializer?: RegexSerializer;
+    component?: Type | ComponentDefinition;
+    loader?: () => Promise&lt;Type&gt;;
+    redirectTo?: any[];
+    as?: string;
+    name?: string;
+    data?: any;
+    useAsDefault?: boolean;
+}
 		</editortab>
 	</li>
 	<li>
 		Whose <em>Route</em> is the most common implementation
-		and the one we used in our example, which takes as parameters:
+		and which needs the following parameters:
 		<ul>
 			<li>
-				The route path (the url in the browser)
+				The route path: the url in the browser
 			</li>
 			<li>
-				The route name, an identifier for this route
+				The route name: an identifier for this route
 			</li>
 			<li>
-				A component type, ie the component to load
+				A component type: the component to load
 			</li>
 		</ul>
 	</li>
