--- a/trainingapp/src/components/slides/mainConcepts/aboutRouter9/aboutRouter9.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutRouter9/aboutRouter9.html
@@ -5,18 +5,15 @@
 
 <ul>
 	<li>
-		We have seen the essentials <em>Router</em>
-		features
+		Essentials <em>Router</em> features are now covered
 	</li>
 	<li>
-		But as we have seen, <em>Router</em> is a complete
-		library to answer most of routing problematics you can
-		encounter
+		But <em>Router</em> is a complete library which answers
+		to most routing problematics
 	</li>
 	<li>
-		If you need to disable the routing of a component conditionally,
-		or not authorize to acceed to a component view based on some conditions,
-		use the following hooks: 
+		For example, you've got hooks to disable the routing of a component conditionally,
+		or not authorize to acceed to a component:
 		<ul>
 			<li>
 				<em>CanActivate</em>: implement the <em>CanActivate</em> interface
