--- a/trainingapp/src/components/slides/mainConcepts/aboutTemplates6/aboutTemplates6.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutTemplates6/aboutTemplates6.html
@@ -5,7 +5,7 @@
 
 <ul>
     <li>
-        Brackets are there to solve previous issues
+        Brackets are there to solve previous issues: <code>[friends]="friends"</code>
     </li>
     <li>
         These are not regular attributes, so they can have
@@ -15,32 +15,30 @@
     <li>
         The value associated is evaluated as an expression
     </li>
+    <li>
+        And if you don't like brackets, use the <em>bind</em> prefix: <code>bind-friends="friends"</code>
+    </li>
 </ul>
 
 
-
-<editor ng2="true" plunker="true" description="Using Parameters" >
-    <editortab title="app/boot.ts" fileType="js" ngNonBindable>
+<editor [ng2]="true" [plunker]="true" description="Using Parameters" >
+    <editortab title="src/app.ts" fileType="js" ngNonBindable>
 import {Component} from '@angular/core';
-import {bootstrap}    from 'angular2/platform/browser';
+import {bootstrap} from '@angular/platform-browser-dynamic';
 import {SubCmp} from './sub-cmp';
 
 @Component({
-    selector: 'my-app',
+    selector: 'app',
     template: '&lt;sub-cmp name="john" [friends]="friends" &gt;&lt;/sub-cmp&gt;',
     directives: [SubCmp]
 })
-export class AppComponent {
+export class App {
     name: string= 'john';
     friends: string[]= ['bob', 'dylan']; 
 }
 
-
-bootstrap(AppComponent), []);
-
     </editortab>
-    <editortab title="app/sub-cmp.ts" fileType="js" ngNonBindable>
-    
+    <editortab title="src/sub-cmp.ts" fileType="js" ngNonBindable>
 import {Component, Input} from '@angular/core';
 
 @Component({
@@ -50,14 +48,13 @@ import {Component, Input} from '@angular/core';
 
     &lt;p&gt;Friends: &lt;/p&gt;
     &lt;ul&gt;
-        &lt;li *ngFor="#friend of friends"&gt;{{friend}}&lt;/li&gt;
+        &lt;li *ngFor="let friend of friends"&gt;{{friend}}&lt;/li&gt;
     &lt;/ul&gt;`
 })
 export class SubCmp {
     @Input() name: string;
     @Input() friends: string[];
 }
-
     </editortab>
 </editor>
 
@@ -65,6 +62,6 @@ export class SubCmp {
 <ul class="exercise">
     <li>
         Do we have the same array instance (<em>friends</em>)  
-        <em>AppComponent</em> and <em>SubCmp</em> ?
+        <em>App</em> and <em>SubCmp</em> ?
     </li>
 </ul>
