--- a/trainingapp/src/components/slides/mainConcepts/allIsComponent3/allIsComponent3.html
+++ b/trainingapp/src/components/slides/mainConcepts/allIsComponent3/allIsComponent3.html
@@ -3,18 +3,19 @@
 	Classes Are Everywhere - Directives / Components
 </h2>
 
+
+<p>
+    <em>Directives</em> concept in <em>Angular2</em> is very similar to the 
+    <em>Angular1</em> one, two possibilities:
+</p>
 <ul>
     <li>
-        <em>Directive</em> in <em>Angular2</em> is very similar to the 
-        <em>Angular1</em> concept
-        <ul>
-            <li>
-                Add a behavior to your application, generally on an other element (no template): 
-                <em>@directive</em> annotation
-            </li>
-            <li>
-                <em>Web Components</em>: <em>@Component</em> annotation
-            </li>
-        </ul>
+        A graphical component, so a <em>Web Component</em>: With the <em>@Component</em> annotation
+    </li>
+    <li>
+        A new behavior on an existing element: 
+        <em>@Directive</em> , this is not a graphical component 
+        (for example the <em>ngForm</em> directive allows to 
+        add behavior for forms management)
     </li>
 </ul>
