--- a/trainingapp/src/components/slides/mainConcepts/moreDI2/moreDI2.html
+++ b/trainingapp/src/components/slides/mainConcepts/moreDI2/moreDI2.html
@@ -4,7 +4,7 @@
 </h2>
 
 <p>
-    The example below show you how to use prgrammaticaly
+    The example below show you how to use programmaticaly
     an <em>injector</em> to
 </p>
 <ul>
