--- a/trainingapp/src/components/slides/preamble/pW1/pW1.html
+++ b/trainingapp/src/components/slides/preamble/pW1/pW1.html
@@ -26,7 +26,7 @@
   </li>
 </ul>
 
-<editor plunker="true">
+<editor [plunker]="true">
 	<editortab title="index.html" filetype="js" >
 
 &lt;!DOCTYPE html&gt;
