--- a/trainingapp/src/components/slides/advancedConcepts/unitTests2/unitTests2.html
+++ b/trainingapp/src/components/slides/advancedConcepts/unitTests2/unitTests2.html
@@ -19,7 +19,7 @@
 	javascript
 </p>
 
-<editor plunker="true">
+<editor [plunker]="true">
 	<editortab title="index.html" fileType="html">
 
 &lt;!DOCTYPE html&gt;
