--- a/trainingapp/src/components/slides/ecosystem/startFromScratch6/startFromScratch6.html
+++ b/trainingapp/src/components/slides/ecosystem/startFromScratch6/startFromScratch6.html
@@ -24,71 +24,101 @@
     
     <editortab title="./package.json" fileType="js">
 {
-  "name": "angular2-quickstart",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
-    "lite": "lite-server",
-    "postinstall": "typings install",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "typings": "typings"
+  "name": "TrainingAngular2",
+  "version": "1.0.1-SNAPSHOT",
+  "author":{
+    "name" : "Legrand Régis",
+    "email" : "regis.legrand@worldline.com"
   },
-  "license": "ISC",
   "dependencies": {
-    "@angular/common":  "2.0.0-rc.1",
-    "@angular/compiler":  "2.0.0-rc.1",
-    "@angular/core":  "2.0.0-rc.1",
-    "@angular/http":  "2.0.0-rc.1",
-    "@angular/platform-browser":  "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic":  "2.0.0-rc.1",
-    "@angular/router":  "2.0.0-rc.1",
-    "@angular/router-deprecated":  "2.0.0-rc.1",
-    "@angular/upgrade":  "2.0.0-rc.1",
-
-    "systemjs": "0.19.27",
-    "es6-shim": "^0.35.0",
-    "reflect-metadata": "^0.1.3",
+    "systemjs":"0.19.29",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12",
-
-    "angular2-in-memory-web-api": "0.0.7",
-    "bootstrap": "^3.3.6"
-  },
+    "reflect-metadata": "0.1.2",
+    "zone.js": "0.6.10",
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.1",
+    "@angular/upgrade": "2.0.0-rc.1"
+    },
   "devDependencies": {
-    "concurrently": "^2.0.0",
-    "lite-server": "^2.2.0",
-    "typescript": "^1.8.10",
-    "typings":"^0.8.1",
     "express":"4.13.4"
   }
 }
     </editortab>
     
-    <editortab title="install" fileType="text">
-#If typescript is not already installed
-$ npm install -g typescript
-
-#Install all dependencies in package.json
-$ npm install 
-
-#Install all TypeScript Definitions
-$ tsd install 
-
-    </editortab>
-    
     <editortab title="server.js">
 
 var http= require('http'),
-	express= require('express'),
-	baseProject= '.';
+    express= require('express'),
+    baseProject= '.';
 
 var server= http.createServer(express()
-	.use(express.static(baseProject + '/src'))
-	.use(express.static(baseProject + '/node_modules')) );
+    .use(express.static(baseProject + '/src'))
+    .use(express.static(baseProject + '/node_modules')) );
 
 server.listen(3000, function(){console.log('listening 3000')});
 
+    </editortab>
+
+    <editortab title="./src/index.html" fileType="html">
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+&lt;head&gt;
+    &lt;title&gt;Min App&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+
+    &lt;app&gt;&lt;/app&gt;
+    
+    &lt;!-- SHIMS --&gt;
+    &lt;script type="text/javascript" src="systemjs/dist/system.js"&gt;&lt;/script&gt;
+    &lt;script type="text/javascript" src="zone.js/dist/zone.js"&gt;&lt;/script&gt;
+    &lt;script type="text/javascript" src="reflect-metadata/Reflect.js"&gt;&lt;/script&gt;
+
+
+    &lt;script type="text/javascript"&gt;
+        System.config({
+            defaultJSExtensions: true,
+            map: {
+                "@angular/common": "@angular/common/index",
+                "@angular/compiler": "@angular/compiler/index",
+                "@angular/core": "@angular/core/index",
+                "@angular/http": "@angular/http/index",
+                "@angular/platform-browser": "@angular/platform-browser/index",
+                "@angular/platform-browser-dynamic": "@angular/platform-browser-dynamic/index",
+                "@angular/router": "@angular/router/index",
+                "@angular/router-deprecated": "@angular/router-deprecated/index",
+                "@angular/upgrade": "@angular/upgrade/index",
+                "google-code-prettify": "google-code-prettify/index"
+            }
+        });
+
+        System.import('app');
+    &lt;/script&gt;
+
+&lt;/body&gt;
+&lt;/html&gt;
+
+    </editortab>
+
+    <editortab title="./src/app.ts" fileType="js">
+import {bootstrap} from '@angular/platform-browser-dynamic';
+import {Component} from '@angular/core';
+
+@Component({
+    selector:'app',
+    template:`
+        &lt;h1&gt;Min App&lt;/h1&gt;
+        &lt;p&gt;Hello world&lt;/p&gt;`
+})
+class App{}
+
+bootstrap(App, []);    
     </editortab>
     
     <editortab title="./tsconfig.json" fileType="js">
@@ -108,59 +138,24 @@ server.listen(3000, function(){console.log('listening 3000')});
     ]
 }
     </editortab>
-    
-    <editortab title="./src/index.html" fileType="html">
-&lt;!DOCTYPE html&gt;
-&lt;html&gt;
-&lt;head&gt;
-	&lt;title&gt;Min App&lt;/title&gt;
-&lt;/head&gt;
-&lt;body&gt;
 
-	&lt;app&gt;&lt;/app&gt;
-	
-	&lt;!-- SHIMS --&gt;
-	&lt;script type="text/javascript" src="systemjs/dist/system.js"&gt;&lt;/script&gt;
-	&lt;script type="text/javascript" src="zone.js/dist/zone.js"&gt;&lt;/script&gt;
-	&lt;script type="text/javascript" src="reflect-metadata/Reflect.js"&gt;&lt;/script&gt;
-
-	&lt;!-- BUNDLED MODULES --&gt;
-	&lt;script type="text/javascript" src="@angular2/bundles/angular2.dev.js"&gt;&lt;/script&gt;
-    
-
-	&lt;script type="text/javascript"&gt;
-		System.config({
-			defaultJSExtensions: true
-		});
-
-		System.import('app');
-	&lt;/script&gt;
-
-&lt;/body&gt;
-&lt;/html&gt;    
-    
+    <editortab title="./root.d.ts" fileType="js">
+/// &lt;reference path="typings/tsd.d.ts" /&gt;
     </editortab>
-    <editortab title="./src/app.ts" fileType="js">
-///&lt;reference path="../node_modules/angular2/typings/browser.d.ts" /&gt;
 
-<<<<<<< HEAD
-import {bootstrap} from 'angular2/bootstrap';
-import {Component} from '@angular/core';
-=======
-import {bootstrap} from '@angular2/bootstrap';
-import {Component} from '@angular2/core';
->>>>>>> 9f0eaefeb030f9fdf73f82d1a125e2898e265bb7
+    <editortab title="install/run" fileType="text">
+#If typescript is not already installed
+$ npm install -g typescript
 
-@Component({
-	selector:'app',
-	template:`
-		&lt;h1&gt;Min App&lt;/h1&gt;
-		&lt;p&gt;Hello world&lt;/p&gt;`
-})
-class App{}
+#Install all dependencies in package.json
+$ npm install 
 
-bootstrap(App, []);    
-    </editortab>
+#Install all TypeScript Definitions
+$ tsd install 
+
+#Run the server
+$ node server
+    </editortab>    
     
 </editor>
 
