--- a/trainingapp/src/components/slides/mainConcepts/aboutPipes4/aboutPipes4.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutPipes4/aboutPipes4.html
@@ -12,20 +12,20 @@
 	<li>mapping: the maps to use</li>
 </ul>
 
-<editor ng2="true" plunker="true" description="Using pipes">
-    <editortab title="app/boot.ts" fileType="js" ngNonBindable>
+<editor [ng2]="true" [plunker]="true" description="Using pipes">
+    <editortab title="src/app.ts" fileType="js" ngNonBindable>
 import {Component} from '@angular/core';
-import {bootstrap}    from 'angular2/platform/browser';
+import {bootstrap} from '@angular/platform-browser-dynamic';
 import {SubCmp} from './sub-cmp';
 
 @Component({
-    selector: 'my-app',
+    selector: 'app',
     template: `
     	&lt;p&gt; Message: {{ getLocalizedKey('msg') | i18nSelect:map }} &lt;/p&gt;
     	&lt;button (click)="switchLocale()"&gt;switch locale&lt;/button&gt;
     `
 })
-export class AppComponent {
+export class App {
 	public availableLocales: string[]= ['fr', 'en'];
 	private index: number= 0;
 	public map: any = {
@@ -42,6 +42,5 @@ export class AppComponent {
 	}
 }
 
-bootstrap(AppComponent), []);
     </editortab>
 </editor>
