--- a/trainingapp/src/components/slides/mainConcepts/aboutRouter3/aboutRouter3.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutRouter3/aboutRouter3.html
@@ -4,40 +4,31 @@
 </h2>
 
 <p>
-	Lot of things in the previous example
+	Things to see in the previous example
 </p>
 
 <ul>
 	<li>
-		Firstly, we have to load our router
-		library this is the aim of
-		<em>router.dev.js</em>
+		The <em>@RouteConfig</em> annotation to map an url to a Component
 	</li>
 	<li>
-		We use the <em>@RouteConfig</em> decorator 
-		to tell which component has to be displayed for 
-		a given <em>url</em>
-	</li>
-	<li>
-		We then import some needed types both for use
-		and configure the router: 
+		Several imports to configure the router
 		<ul>
 			<li>
 				<em>ROUTER_PROVIDERS</em>: Which contains needed
 				providers we have to provide to the app
 			</li>
 			<li>
-				<em>ROUTER_DIRECTIVES</em>: To specify that our component
-				will need such directives
+				<em>ROUTER_DIRECTIVES</em>: is needed for components which will use the router directives
 			</li>
 			<li>
 				<em>LocationStrategy</em> and 
 				<em>HashLocationStrategy</em> to specify
 				the way <em>urls</em> will be managed by the
-				router this way: <code>server:port/app/#/your/path</code>
+				router, in our case, thiw way: <code>server:port/app/#/your/path</code>
 			</li>
 			<li class="warning">
-				<em>HashLocationStratefy</em> 
+				<em>HashLocationStrategy</em> 
 				is not the default value. By default, <em>urls</em>
 				are managed with the pushState api and urls looks
 				like: <code>server:port/app/your/path</code>. More
