--- a/trainingapp/src/components/slides/mainConcepts/aboutTemplates/aboutTemplates.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutTemplates/aboutTemplates.html
@@ -3,14 +3,17 @@
 	About Templates - Introduction
 </h2>
 
-<p>
-    Compared to <em>Angular1</em>, the <em>Angular2</em> templates syntax seems
-    a little bit more complex. It looks like someone want to decorate the <em>HTML</em>
-    with characters we are not used to see there... 
-</p>
-<p>
-    As an example the following syntax is correct
-</p>
+<ul>
+    <li>
+        The templates syntax seems a little bit complex
+    </li>
+    <li>
+        Doesn't look like standard <em>html</em>
+    </li>
+    <li>
+        As an example the following syntax is correct
+    </li>
+</ul>
 
 <editor>
     <editortab title="my-cmp.html" fileType="html" ngNonBindable>
@@ -19,7 +22,7 @@
 
 &lt;p&gt;User List: &lt;/p&gt;
 &lt;ul&gt;
-    &lt;li *ngFor="#user of users; #index= index;" (click)="goToDetails()" &gt;
+    &lt;li *ngFor="let user of users; let index= index;" (click)="goToDetails()" &gt;
         &lt;user-cmp [id]="user.id"&gt;&lt;/user-cmp&gt; 
     &lt;/li&gt;
 &lt;/ul&gt;
