--- a/trainingapp/src/components/slides/mainConcepts/aboutTemplates2/aboutTemplates2.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutTemplates2/aboutTemplates2.html
@@ -4,36 +4,23 @@
 </h2>
 
 <p>
-    Listening events is a common need in <em>javascript</em>,
-    and this was easy enough to do it with <em>AngularJs</em>. 
-    In order to do so and listen to the <em>click</em>
-     event for example, we had to use the <code>ngClick</code> 
-     directive.
+    Listening events is a common need in <em>javascript</em>
 </p>
-
 <ul>
-    <li>Disadvantage: one directive for each event means a new event needs a new directive</li>
-    <li>with <em>Angular2</em>, no use of directive but parenthesis</li>
-    <li>It's a native behavior, and you don't need any new devlopment to manage new events</li>
-    <li><code>$event</code> is made available in the associated expression if you need </li>
-</ul> 
+   <li>With <em>ng2</em>, this is a native behavior, and you don't need any new devlopment to manage new events</li>
+   <li>Just use <code>(eventToManage)= "expression" </code> </li>
+   <li>Don't like the parenthesis? Then use the <code>on-eventname = "expression" </code> syntax instead</li>
+</ul>
 
-
-<editor ng2="true" plunker="true" description="sample">
-    <editortab title="app/boot.ts" fileType="js">
-import {bootstrap}    from 'angular2/platform/browser';
-import {AppComponent} from 'app/components/app';
-
-bootstrap(AppComponent, []);
-    </editortab>
-    <editortab title="app/components/app.ts" fileType="js">
+<editor [ng2]="true" [plunker]="true" description="sample">
+    <editortab title="src/app.ts" fileType="js">
 import {Component} from '@angular/core';
 
 @Component({
-	selector: 'my-app',
-	templateUrl: 'app/components/app.html'
+	selector: 'app',
+	templateUrl: 'src/app.html'
 })
-export class AppComponent {
+export class App {
   
   logEvent(msg, event){
     console.log(msg);
@@ -42,7 +29,7 @@ export class AppComponent {
   
 } 
     </editortab>
-    <editortab title="app/components/app.html" fileType="html">
+    <editortab title="src/app.html" fileType="html">
 &lt;h1&gt;Checking event handling&lt;/h1&gt;
 
 &lt;p (click)="logEvent('click', $event)"  &gt;
@@ -52,3 +39,7 @@ export class AppComponent {
 &lt;/p&gt;
     </editortab>
 </editor>
+
+<p class="exercise">
+  If you know <em>ng1</em>, compare behaviors, which is better and why?
+</p>
