--- a/trainingapp/src/components/slides/mainConcepts/moreDI6/moreDI6.html
+++ b/trainingapp/src/components/slides/mainConcepts/moreDI6/moreDI6.html
@@ -23,7 +23,7 @@
     <editortab title="bootstrap" fileType="js">
 
 import {Component} from '@angular/core';
-import {bootstrap}    from 'angular2/platform/browser';
+import {bootstrap} from '@angular/platform-browser-dynamic';
 
 @Component({
     selector: 'main-cmp',
