--- a/trainingapp/src/components/slides/preamble/webComponents3/webComponents3.html
+++ b/trainingapp/src/components/slides/preamble/webComponents3/webComponents3.html
@@ -14,7 +14,7 @@
 	is so in the <em>Shadow Dom</em>
 </p>
 
-<editor plunker="true">
+<editor [plunker]="true">
 	<editortab title="index.html" fileType="html">
 &lt;!DOCTYPE html&gt;
 &lt;html&gt;
